# model-beat

./: .gitignore  README.md
.github/workflows/: deploy-health.yml  deploy-pipeline.yml
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  sentry.client.config.ts
frontend/content/digest/: 2026-07-09.md  2026-07-16.md  2026-07-23.md
frontend/src/app/: HomePageClient.tsx  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: BrandLockup.tsx  CategoryFilter.tsx  CompareControls.tsx  CompareTable.tsx  DateNav.tsx  DateSection.tsx  DigestForm.tsx  DigestTeaser.tsx  DigestTeaserCard.tsx  FeatureCard.tsx  HeroModelBand.tsx  ModelLandscape.tsx  ModelTelemetry.tsx  ModelsExplorer.tsx  ModelsLeaderboard.tsx  NavBar.tsx  PapersFold.tsx  Recap.tsx  ScoreBadge.tsx  ShareMenu.tsx  SharePopover.tsx  SiteFooter.tsx  SourceBubble.tsx  StoryCard.tsx  Ticker.tsx  WaitlistBanner.tsx  WaitlistForm.tsx  categoryMeta.ts
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: benchmarks.ts  bestModels.ts  comparePairs.ts  db.ts  digestIssues.ts  digestTeaser.ts  modelBuckets.ts  modelStatus.ts  papers.ts  schema.sql  scoreReceipt.ts  site.ts  story.ts  storyRank.ts  timeFormat.ts
pipeline/: .dockerignore  DEPLOY.md  Dockerfile  cloudrun-job.yaml  pyproject.toml
pipeline/migrations/: schema.sql
pipeline/scripts/: cluster_eval.py  digest_draft.py  recluster_recent.py  simulate_recluster.py  weekly_metrics.py
pipeline/src/ainews/: config.py  db.py  main.py
pipeline/src/ainews/ingestors/: github.py  hackernews.py  rss.py
pipeline/src/ainews/processing/: clustering.py  llm.py  model_registry.py  scoring.py  summarize.py
pipeline/tests/: test_clustering.py  test_main.py  test_model_registry.py  test_normalize.py  test_rss.py  test_summarize.py
(+42 files in other folders)
