[project]
name = "ainews-pipeline"
version = "0.1.0"
description = "Data ingestion pipeline for AI News Calendar"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    # <0.5: pgvector 0.5.0 makes register_vector return Vector objects instead of
    # numpy arrays, crashing clustering's np.asarray (3 failed runs, 2026-07-10)
    "pgvector>=0.3,<0.5",
    "feedparser>=6.0",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "torch>=2.6.1",
    "google-genai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "langdetect>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
ainews = "ainews.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
